# tree-search-rs

./: BUILD.md  Cargo.toml  README.md  impl-19.md  impl-29.md
.github/workflows/: ai-issue.yml  auto-implement.yml  opencode-issue.yml  release.yml
docs/: impl-21.md  impl-22.md  impl-24.md
src/: config.rs  fts.rs  heuristics.rs  indexer.rs  lib.rs  main.rs  pathutil.rs  search.rs  tokenizer.rs  tree.rs
src/parsers/: code.rs  csv.rs  docx.rs  html.rs  json.rs  markdown.rs  mod.rs  pdf.rs  text.rs  xml.rs
tests/: test_tree.rs  test_version.rs
