[package]
name = "tree-search-rs"
version = "1.0.0"
edition = "2021"
authors = ["huqi <huqi1024@gmail.com>"]
description = "Tree-aware document search engine with Tantivy FTS"
license = "MIT"
repository = "https://gitcode.com/huqi/tree-search-rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Full-text search (Tantivy)
tantivy = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path handling
walkdir = "2"
glob = "0.3"
pathspec = "0.3"

# Parsing - Markdown
pulldown-cmark = "0.10"

# Parsing - Code (tree-sitter)
tree-sitter = "0.22"
tree-sitter-python = "0.22"
tree-sitter-javascript = "0.22"
tree-sitter-java = "0.22"
tree-sitter-go = "0.22"
tree-sitter-cpp = "0.22"
tree-sitter-rust = "0.22"

# Parsing - HTML/XML
scraper = "0.19"
quick-xml = "0.37"

# Parsing - PDF
lopdf = "0.34"

# Parsing - DOCX
docx-rs = "0.4"

# Parsing - CSV
csv = "1.3"

# Chinese tokenization
jieba-rs = "0.6"

# Regex
regex = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# DashMap for concurrent map
dashmap = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "treesearch"
path = "src/main.rs"